--- a/index.html
+++ b/index.html
@@ -9,22 +9,18 @@
 </head>
 <body>
 
-    <!-- header -->
-     <header>
+    <header>
+        <img src="https://www.1papacaio.com.br/images/pngs/disney/cinderela/cinderela-002.png" alt="Cinderela's profile picture">
+        <h1>“Tenha coragem e seja gentil, porque onde existe gentileza existe bondade e onde existe bondade existe magia”</h1>
+    </header>
+
+    <main>
 
 
-     </header>
+    </main>
 
-    <!-- main -->
-     <main>
+    <footer>
 
-
-     </main>
-
-    <!-- footer -->
-     <footer>
-
-        
-     </footer>
+    </footer>
 </body>
 </html>
