--- a/index.html
+++ b/index.html
@@ -6,21 +6,39 @@
     <title>Cinderela</title>
     <link rel="icon" href="https://upload.wikimedia.org/wikipedia/pt/5/58/Cinderella_by_Disney.png">
     <link rel="stylesheet" href="./css/style.css">
+    <meta name="description" content="Página sobre a personagem Cinderela da Disney">
+    <meta name="keywords" content="Cinderela, Disney, Princesa, Conto de Fadas">
 </head>
 <body>
 
     <header>
-        <img src="https://www.1papacaio.com.br/images/pngs/disney/cinderela/cinderela-002.png" alt="Cinderela's profile picture">
+        <img src="https://www.1papacaio.com.br/images/pngs/disney/cinderela/cinderela-002.png" alt="Foto de perfil da Cinderela">
         <h1>“Tenha coragem e seja gentil, porque onde existe gentileza existe bondade e onde existe bondade existe magia”</h1>
     </header>
 
     <main>
-
-
+        <h2>Sobre Cinderela</h2>
+        <p>Uma jovem bondosa que é maltratada por sua madrasta e irmãs, mas que consegue ir a um baile real e conquistar um príncipe.</p>
+        <img src="https://w7.pngwing.com/pngs/237/871/png-transparent-cinderella-prince-charming-snow-white-cinderella-and-prince-disney-cinderella-illustration-image-file-formats-the-walt-disney-company-cartoons-thumbnail.png" alt="Cinderela e o Príncipe Charmoso">
+        <p class="caption">Cinderela e o Príncipe.</p>
+        <h2>Características da Cinderela</h2>
+        <ol>
+            <li>Ela é bonita</li>
+            <li>Ela é bondosa</li>
+            <li>Ela é jovem</li>
+            <li>Ela é educada</li>
+        </ol>
+        <h2>Amigos da Cinderela</h2>
+        <ul>
+            <li><a href="https://disneyprincesas.fandom.com/pt-br/wiki/Jaq_e_Tata#:~:text=Jaq%20e%20Tata%20(Gus%20no,%C3%A9%20dublado%20por%20Corey%20Burton.Ratos" target="_blank" title="Ratos Jaq e Tata">Ratos Jaq e Tata</a></li>
+            <li><a href="https://disneyprincesas.fandom.com/pt-br/wiki/Major" target="_blank" title="Cavalo Major">Major</a></li>
+            <li><a href="https://disneyprincesas.fandom.com/pt-br/wiki/P%C3%A1ssaros_(Cinderela)" target="_blank" title="Pássaros">Pássaros</a></li>
+            <li><a href="https://disneyprincesas.fandom.com/pt-br/wiki/Bruno_(Cinderela)" target="_blank" title="Cão Bruno">Cão Bruno</a></li>
+            <li><a href="https://disneyprincesas.fandom.com/pt-br/wiki/Fada_Madrinha" target="_blank" title="Fada Madrinha">Fada Madrinha</a></li>
+        </ul>
     </main>
 
     <footer>
-
     </footer>
 </body>
 </html>
