Elemento foto adicionado

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     </main>
 
     <footer>
+        <p>O website foi criado durante a aula do <a href="https//www.taptapkaboom.com"> TapTapKaboom</a> Feito por Nicole &#169; 2025</p>
     </footer>
 </body>
 </html>
